# Dosemeter_V2

./: .cproject  .project  sdkconfig  sdkconfig.old
components/lvgl/: lv_conf_template.h
components/lvgl/src/core/: lv_event.c  lv_group.c  lv_group.h  lv_indev.c  lv_obj.c  lv_obj.h  lv_obj_style.c
components/lvgl/src/font/: greek.c  lv_font.h  lv_font_fmt_txt.c  montserrat_170_num.c  montserrat_48.c  montserrat_52.c  montserrat_55.c  montserrat_60.c
components/lvgl/src/widgets/: lv_checkbox.c  lv_roller.c  lv_slider.c  lv_table.c
main/: CMakeLists.txt  atom_scan_logo.c  gui.c  lol_lvgl.c  main.c  main.h  playboy3_lvgl.c
